# SDL-OpenGL

./: .gitignore  CMakeLists.txt  Makefile  README.md  a.out  main.c
include/: err.h  error.h  render.hpp  shader.h
include/glad/: glad.h
shaders/: frag.glsl  vert.glsl
src/: err.c  error.c  glad.c  main.c  main.cpp  shader.c
